# lazy_librarian_kaggle

./: .gitignore  README.md  main.py  pyproject.toml  submission_cmf_enriched.csv
data/: interactions.csv  items.csv  items_enriched.csv
data/_/: items_with_topics.parquet  subject_tfidf.npz
data/submissions/: submission_cmf_full_enriched.csv
data_preprocessing/: clean_dataset.py  clean_interactions.py  clean_items.py  config.py  encode_categorical.py  encode_subjects.py  load_data.py
data_preprocessing/test/: encode_subjects.test.py
front/: main.py
models/: cmf_recommender.py
pipe/: collective_matrix_factorisation.py  eval.py  hybrid_ranking.py  split.py  stats.py  submit.py  train.py
